increases size of i18 text area labels
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/i18n/i18n.component.css
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.css
@@ -27,6 +27,10 @@
   line-height: 12px;
 }
 
+.text-area {
+  min-width:500px;
+}
+
 .input-alternative {
   line-height: 12px;
   margin-left: 100px;
