fixes #96 new created intent not present in intents select
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -24,7 +24,7 @@
         <md-icon color="primary" md-tooltip="Search support regexp (PCRE format)">info</md-icon>
         <md-select placeholder="Intent" [(ngModel)]="filter.intentId" (change)="search()">
           <md-option value="-1">All</md-option>
-          <md-option *ngFor="let intent of state.currentApplication.intents" [value]="intent._id">
+          <md-option *ngFor="let intent of state.currentIntents | async" [value]="intent._id">
             {{intent.name}}
           </md-option>
           <md-option value="unknown">Unknown</md-option>
