--- a/nlp/admin/web/src/app/intents/intents.component.html
+++ b/nlp/admin/web/src/app/intents/intents.component.html
@@ -17,7 +17,7 @@
 <md-card>
   <md-card-content>
     <table border="1" class="table">
-      <tr *ngFor="let i of state.currentApplication.intents">
+      <tr *ngFor="let i of state.currentIntents | async">
         <td>
           {{i.name}}
         </td>
