resolves #120 support "test context" keyword and add dialogs monitoring by connector
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/shared/bot-dialog/display-dialog.component.css
+++ b/bot/admin/web/src/app/shared/bot-dialog/display-dialog.component.css
@@ -16,7 +16,23 @@
 
 .userAction {
   color:lightseagreen;
+
 }
+
+.connector {
+  float:left;
+  padding-right: 5px;
+  width:24px;
+  height:24px;
+}
+
+.testAction {
+  float:left;
+  padding-right: 5px;
+  width:24px;
+  height:24px;
+}
+
 .botAction {
   color:brown;
 }
