#119 google assistant: improve monitoring support
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/shared/bot-message/bot-message-choice.component.html
+++ b/bot/admin/web/src/app/shared/bot-message/bot-message-choice.component.html
@@ -15,8 +15,9 @@
   -->
 
 <span *ngIf="user" mdTooltip="{{parameters()}}">[Choice] {{choice.intentName}}</span>
-<span *ngIf="!user" mdTooltip="{{parameters()}}">
-        <button (click)="click()" md-button color="{{url() ? 'warn' : 'primary'}}">
+<span *ngIf="!user">
+        <button (click)="click()" md-button color="{{url() ? 'warn' : 'primary'}}" class="choice"
+                [md-tooltip]="title()? title() + ' - ' + parameters() : parameters()">
           <span *ngIf="title()">{{title()}}</span>
           <span *ngIf="!title()">{{choice.intentName}}</span>
         </button>
