--- a/bot/admin/web/src/app/bot/i18n/i18n.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.html
@@ -77,14 +77,34 @@
         <div class="locale">{{l.locale}}</div>
         <md-icon class="userInterface" *ngIf="l.interfaceType === 0" md-list-avatar>chat</md-icon>
         <md-icon class="userInterface" *ngIf="l.interfaceType === 1" md-list-avatar>record_voice_over</md-icon>
+        <img *ngIf="l.connectorId"
+             src="/assets/images/{{l.connectorId}}.svg"
+             class="connector"
+             [md-tooltip]="l.connectorId"/>
 
         <md-input-container class="input text-area">
-          <textarea mdInput [(ngModel)]="l.label" (change)="save(i, l)" cols="100" rows="1"></textarea>
+          <textarea mdInput [(ngModel)]="l.label" (change)="save(i)" cols="100" rows="1"></textarea>
         </md-input-container>
 
-        <md-checkbox [(ngModel)]="l.validated" (change)="save(i, l)">
+        <md-checkbox [(ngModel)]="l.validated" (change)="save(i)">
           Validated
         </md-checkbox>
+
+        <button
+          *ngIf="l.connectorId || !i.hasLocalAndInterfaceWithASpecifiedConnector(l.locale, l.interfaceType)"
+          md-icon-button (click)="removeLocalizedLabel(i, l)" md-tooltip="Clear localized label" color="warn">
+          <md-icon>clear</md-icon>
+        </button>
+
+        <span *ngFor="let connector of config.supportedConnectors | async">
+        <button *ngIf="!i.hasLocaleAndInterfaceAndConnector(l.locale, l.interfaceType, connector.id)" md-icon-button
+                (click)="addLocalizedLabelForConnector(i, l, connector.id)" md-tooltip="Clear localized label" color="warn">
+          <img
+            src="/assets/images/{{connector.id}}.svg"
+            class="connector"
+            md-tooltip="Add specific label for connector {{connector.id}}"/>
+        </button>
+          </span>
 
         <span *ngFor="let a of l.alternatives;let index=index;">
           <br>
@@ -97,7 +117,7 @@
           </button>
         </span>
 
-        <button md-button (click)="addNewAlternative(l)" md-tooltip="Add an alternative">
+        <button md-icon-button (click)="addNewAlternative(l)" md-tooltip="Add an alternative">
           <md-icon>add</md-icon>
         </button>
       </div>
