--- a/bot/admin/web/src/app/bot/i18n/i18n.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.html
@@ -66,62 +66,6 @@
 <md-list dense>
   <div *ngFor="let i of filteredI18n">
     <h3 *ngIf="i.firstCategory" md-subheader>{{i.category}}</h3>
-    <md-list-item>
-      <h4 md-line>
-        <span class="defaultLabel" md-tooltip="id: {{i._id}}">{{i.defaultLabel().label}}</span>
-        <button md-button (click)="deleteLabel(i)" md-tooltip="Delete Label" color="warn">
-          <md-icon>delete_forever</md-icon>
-        </button>
-      </h4>
-      <div md-line *ngFor="let l of i.i18n">
-        <div class="locale">{{l.locale}}</div>
-        <md-icon class="userInterface" *ngIf="l.interfaceType === 0" md-list-avatar>chat</md-icon>
-        <md-icon class="userInterface" *ngIf="l.interfaceType === 1" md-list-avatar>record_voice_over</md-icon>
-        <img *ngIf="l.connectorId"
-             src="/assets/images/{{l.connectorId}}.svg"
-             class="connector"
-             [md-tooltip]="l.connectorId"/>
-
-        <md-input-container class="input text-area">
-          <textarea mdInput [(ngModel)]="l.label" (change)="save(i)" cols="100" rows="1"></textarea>
-        </md-input-container>
-
-        <md-checkbox [(ngModel)]="l.validated" (change)="save(i)">
-          Validated
-        </md-checkbox>
-
-        <button
-          *ngIf="l.connectorId || !i.hasLocalAndInterfaceWithASpecifiedConnector(l.locale, l.interfaceType)"
-          md-icon-button (click)="removeLocalizedLabel(i, l)" md-tooltip="Clear localized label" color="warn">
-          <md-icon>clear</md-icon>
-        </button>
-
-        <span *ngFor="let connector of config.supportedConnectors | async">
-        <button *ngIf="!i.hasLocaleAndInterfaceAndConnector(l.locale, l.interfaceType, connector.id)" md-icon-button
-                (click)="addLocalizedLabelForConnector(i, l, connector.id)" md-tooltip="Clear localized label" color="warn">
-          <img
-            src="/assets/images/{{connector.id}}.svg"
-            class="connector"
-            md-tooltip="Add specific label for connector {{connector.id}}"/>
-        </button>
-          </span>
-
-        <span *ngFor="let a of l.alternatives;let index=index;">
-          <br>
-          <md-input-container class="input-alternative text-area">
-            <textarea mdInput [value]="a" (change)="addAlternative(i, l, index, $event.target.value)" cols="90"
-                      rows="1"></textarea>
-          </md-input-container>
-          <button md-button (click)="removeAlternative(i, l, index)" md-tooltip="Remove alternative">
-            <md-icon>remove</md-icon>
-          </button>
-        </span>
-
-        <button md-icon-button (click)="addNewAlternative(l)" md-tooltip="Add an alternative">
-          <md-icon>add</md-icon>
-        </button>
-      </div>
-      <div md-line></div>
-    </md-list-item>
+    <tock-i18n-label [i]="i" [i18nController]="controller()"></tock-i18n-label>
   </div>
 </md-list>
