--- a/bot/admin/web/src/app/bot/intent/search-bot-intent.component.css
+++ b/bot/admin/web/src/app/bot/intent/search-bot-intent.component.css
@@ -1,5 +1,6 @@
 .intent {
-  width:80%;
+  width:800px;
+  overflow-x: auto;
   margin-left: auto;
   margin-right: auto;
   margin-top:20px;
@@ -14,3 +15,4 @@
   width:80%;
   font-size: xx-large;
 }
+
