--- a/nlp/admin/web/src/app/entities/entity-details.component.css
+++ b/nlp/admin/web/src/app/entities/entity-details.component.css
@@ -13,11 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-.entities {
-  height:100%;
-  width:80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:20px;
-  text-align:center;
+
+.dateType {
+  padding-left: 20px;
 }
