bot admin: improves test labels
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
+++ b/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
@@ -19,7 +19,7 @@
 </div>
 <div *ngIf="(botConfiguration.restConfigurations|async).length!==0">
   <md-select (change)="changeConfiguration($event.value)"
-             placeholder="Select a bot"
+             placeholder="Select a configuration"
              [ngModel]="configurationId"
              class="select-configuration">
     <md-option *ngFor="let conf of (botConfiguration.restConfigurations|async)"
