--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -15,7 +15,7 @@
   -->
 <md-card>
   <md-card-title>
-    Talk to the bot
+    Test the application {{state.currentApplication.name}}
   </md-card-title>
   <md-card-content>
     <br>
