nlp admin: fixes chrome regression - async not supported in dialog
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
@@ -24,8 +24,8 @@
   <p>
     Select existing Entity
 
-    <md-chip-list>
-      <md-chip *ngFor="let e of state.entityTypesSortedByName() | async" mdTooltip="Select {{e.qualifiedName(state.user)}}" selected="{{e === entityType}}" (click)="onSelect(e)" [style.background-color]="e === entityType ? '' : e.qualifiedEntityColor(state.user)" color="primary">
+    <md-chip-list *ngIf="entityTypes">
+      <md-chip *ngFor="let e of entityTypes" mdTooltip="Select {{e.qualifiedName(state.user)}}" selected="{{e === entityType}}" (click)="onSelect(e)" [style.background-color]="e === entityType ? '' : e.qualifiedEntityColor(state.user)" color="primary">
         {{e.qualifiedName(state.user)}}
       </md-chip>
     </md-chip-list>
