resolves #153 nlp admin: support simple keyboard entity selection
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -18,8 +18,7 @@
   <div class="highlight-text">
     <div *ngIf="tokens && !readOnly"
          class="tokens"
-         (mouseup)="select()"
-         (touchend)="select()"><span *ngFor="let t of tokens"
+         (mouseup)="select()" (touchend)="select()"><span *ngFor="let t of tokens"
                                      [style.font-size]="fontSize"
                                      [style.background]="t.color()"
                                      [id]="prefix + t.index">{{t.text}}</span></div>
